# KataSupermarket-workshop

./: .gitignore  README.md
.github/: dependabot.yml
csharp/: README.md
csharp/KataSupermarket/: CashRegister.cs  Item.cs  KataSupermarket.csproj
csharp/KataSupermarket.Tests/: ItemTests.cs  KataSupermarket.Tests.csproj  Tests.cs
java/: README.md
python3/: .gitignore  README.md  pyproject.toml
python3/src/kata_supermarket/: __init__.py  main.py
python3/tests/: __init__.py  test_kata_supermarket.py
typescript/: README.md  package-lock.json
typescript/__tests__/: main.test.ts
